--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -15913,8 +15913,8 @@
 
                 const fullText = `안녕하세요.
 디자인지그입니다.
-아래와 같이 현장 일정 및 내용을 안내드립니다.
-일정 확인 후 반드시 회신 부탁드립니다.
+현장 일정 및 내용을 안내드립니다.
+**일정 확인 후 반드시 회신 부탁드립니다.**
 
 ■ 일정
 - ${dateRangeDisplay}
@@ -15930,11 +15930,10 @@ ${processSection}
 - 원프로 (010-4650-7013)
 
 ■ 현장 안내사항
-1. 세대 내부에서는 흡연을 절대 금지합니다.
-2. 안내된 작업 시간은 반드시 엄수해 주시기 바랍니다.
-3. 작업 종료 후 현장 정리정돈을 철저히 해주시기 바랍니다.
-4. 작업 종료 후 창문 개폐 여부를 반드시 확인해 주시기 바랍니다.
-5. 출입문 및 세대 문단속을 철저히 확인해 주시기 바랍니다.
+1. 세대 내 흡연 금지
+2. 작업시간 준수
+3. 작업 후 정리정돈
+4. 창문·출입문 문단속 필수
 
 감사합니다.
 디자인지그 드림.
